@@ -15,7 +15,7 @@
                         {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
                     {% endfor %}
                 </ul>
-                <input type="submit" value="{% trans 'Change password' %}" class="button" />
+                <button type="submit" class="button">{% trans 'Change password' %}</button>
             </form>
         {% else %}
             <p>{% trans "Your password can't be changed here. Please contact a site administrator." %}</p>
